--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -8,3 +8,7 @@ ja:
         first_name_kana: 名前(カナ)
         family_name_kana: 苗字(カナ)
         phone_number: 電話番号
+      staff:
+        nickname: ニックネーム
+        email: Eメール
+        password: パスワード
